objects/Safe_Island_Assessments__c.object
<CustomObject>
    <description>R4-Safe Island Assessments</description>
    <fields>
        <fullName>AccountCustomer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>R4 - Safe Island</description>
        <label>Account Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Safe Island Assessments</relationshipLabel>
        <relationshipName>Safe_Island_Assessments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <description>R4 - Safe Island</description>
        <formula>IF(
OR(ISPICKVAL(Customer_Execution_TCs__c,&quot;Opportunistic (actively uses T&amp;Cs to increase LDs &amp; Delay Payments)&quot;), 
ISPICKVAL (Customer_Integrity_Track__c , &quot;Red Flag&quot;)),
&apos;Non-focus Customer&apos;,
IF(AND(ISPICKVAL (Customer_Integrity_Track__c , &quot;No Red Flag&quot;), 
ISPICKVAL(Customer_HCE_Culture__c , &quot;Stricter than ABBs&quot;),
ISPICKVAL(Credit_Assessment__c , &quot;Strong (Credit rating 4)&quot;),
ISPICKVAL(Customer_Payment__c ,&quot;Reasonable collection efforts by ABB&quot;),
ISPICKVAL(Customer_Execution_TCs__c , &quot;Cooperative active (responds strictly when important problem occurs)&quot;)),
&quot;High-focus Customer&quot;,
&quot;Focus customer with required response&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Classification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>R4 - Safe Island</description>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia, Plurinational State of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Czech Republic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Croatia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colombia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Congo, Democratic Republic of the</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cameroon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Costa Rica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cote d&apos;Ivoire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cyprus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denmark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dominican Republic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecuador</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>El Salvador</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CreditAssesmentPriority__c</fullName>
        <formula>CASE(Text(Credit_Assessment__c),&apos;Weak (Credit rating 1 - 2)&apos;, 1,&apos;Average (Credit rating 3)&apos;,3,&apos;Strong (Credit rating 4)&apos;,4,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreditAssesmentPriority</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Assessment__c</fullName>
        <description>R4 - Safe Island</description>
        <label>Credit Assessment</label>
        <picklist>
            <picklistValues>
                <fullName>Weak (Credit rating 1 - 2)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Average (Credit rating 3)</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Strong (Credit rating 4)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Execution_TCs__c</fullName>
        <description>R4 - Safe Island</description>
        <label>Customer&apos;s Execution of T&amp;Cs</label>
        <picklist>
            <picklistValues>
                <fullName>Opportunistic (actively uses T&amp;Cs to increase LDs &amp; Delay Payments)</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Strict / formalistic (strictly follows item by item)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Co-operative active (responds strictly when important problem occurs)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_HCE_Culture__c</fullName>
        <description>R4 - Safe Island</description>
        <label>Customer HSE Culture</label>
        <picklist>
            <picklistValues>
                <fullName>Less Strict than ABBs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Line with ABBs</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Stricter than ABBs</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Integrity_Track__c</fullName>
        <description>R4 - Safe Island</description>
        <label>Customer Integrity Track</label>
        <picklist>
            <picklistValues>
                <fullName>No Red Flag</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Red Flag</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Payment__c</fullName>
        <description>R4 - Safe Island</description>
        <label>Payment / Cash Collection History</label>
        <picklist>
            <picklistValues>
                <fullName>Exceptionally demanding collection efforts</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>High collection efforts by ABB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reasonable collection efforts by ABB</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GIS_GUID__c</fullName>
        <description>R4 - Safe Island</description>
        <formula>AccountCustomer__r.GUID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GIS GUID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PG__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>R4 - This field refers to PG.</description>
        <label>PG</label>
        <referenceTo>Product_Group__c</referenceTo>
        <relationshipLabel>Safe Island Assessments (PG)</relationshipLabel>
        <relationshipName>Product_Groups</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Safe Island Assessments</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SIA-{00000000}</displayFormat>
        <label>Safe Island Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Safe Island Assessments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>No_Safe_Islan_Assessment_On_Bulk_Acc</fullName>
        <active>true</active>
        <description>Related Account cannot be Bulk Business.</description>
        <errorConditionFormula>AND(
    NOT($User.AccountMerge_Override__c),
    NOT($Setup.Validation_Override__c.Exclude__c),
    CONTAINS(LOWER(AccountCustomer__r.Name), &apos;bulk business&apos;)
)</errorConditionFormula>
        <errorMessage>Related Account cannot be Bulk Business.</errorMessage>
    </validationRules>
</CustomObject>